<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    android:orientation="vertical"
    tools:context="ui.Rules">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/gamerules"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:shadowColor="@color/black"
            android:shadowRadius="1.0"
            android:text="@string/textrules"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:textColorLink="@color/link"
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:shadowColor="@color/black"
            android:shadowRadius="1.0"
            android:text="@string/my_link"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45sp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="45sp"
            android:backgroundTint="@color/gray"
            android:gravity="center_horizontal"
            android:text="@string/back"
            android:textSize="30sp"
            app:cornerRadius="15dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

    </LinearLayout>

</ScrollView>