<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gamerules"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:shadowColor="@color/black"
        android:shadowRadius="1.0"
        android:text="@string/textrules"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45sp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="45sp"
        android:backgroundTint="@color/gray"
        android:gravity="center_horizontal"
        android:onClick="onClick"
        android:text="@string/back"
        android:textSize="30sp"
        app:cornerRadius="15dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />
</LinearLayout>
