<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/beige"
    android:orientation="vertical"
    tools:context=".ui.EndGameForWhite">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:text="@string/endgamewhite"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/rematch"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        app:cornerRadius ="15dp"
        android:backgroundTint="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45sp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="45sp"
        android:gravity="center_horizontal"
        android:onClick="rematch"
        android:text="@string/rematch"
        android:textSize="30sp" />

    <Button
        android:id="@+id/mainmenu"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        app:cornerRadius ="15dp"
        android:backgroundTint="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45sp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="45sp"
        android:gravity="center_horizontal"
        android:onClick="mainMenu"
        android:text="@string/mainmenu"
        android:textSize="30sp" />

</LinearLayout>